test/must_fail/file_read_2_args.ref
error: file_read(path) require exactly 1 arguments but 2 was given
  [file_read_2_args.ngjs:0:0] in <anonymous>()
    file_read('/1.json', 'asdf');
    ^

hint: function 'file_read(path)' was called with 2 arguments
hint: argument #0 was /1.json (string)
hint: argument #1 was asdf (string)

Stack trace (1 frames):
  [file_read_2_args.ngjs:0:0] in <anonymous>()
    file_read('/1.json', 'asdf');
    ^

exit(7)
