test/must_fail/file_read_2_args.ngjs
#!/usr/bin/env ngspicejs
// Fire read only has 1 argument
// linter: ngspicejs-lint
"use strict";

file_read('/1.json', 'asdf');
